--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,10 @@ body {
 .fade-in {
   animation: fadeIn 2s ease-out;
 }
+
+.no-select {
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+}
